--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "bluebird": "^3.5.0"
+    "bluebird": "^3.5.0",
+    "shortid": "^2.2.8"
   }
 }
